# ModelToSheet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Design.drawio  ModelToSheet.cpp
ModelToSheet/: CMakeLists.txt  README.md
ModelToSheet/include/glad/: CMakeLists.txt
ModelToSheet/include/glad/include/glad/: glad.h
ModelToSheet/include/glad/src/: glad.c
ModelToSheet/resources/Shaders/: DebugFragment.shader  DebugVertex.shader  DiffuseF.shader  Fragment.shader  Fragment2D.shader  NormalF.shader  SpecularF.shader  Vertex.shader  Vertex2D.shader
ModelToSheet/src/: ModelToSheet.h  pch.h  tree.txt
ModelToSheet/src/Core/: Application.cpp  Application.h  ExampleLayer.h  Helpers.h  Input.h  KeyCodes.h  LayerStack.cpp  Log.cpp  Log.h  MacroDefinitions.h  MouseCodes.h  ResourceManager.cpp  ResourceManager.h  Window.h
ModelToSheet/src/CoreFix/: Application.h  EntryPoint.cpp  Input.h  Log.cpp  ResourceManager.h  Window.h
ModelToSheet/src/Events/: ApplicationEvents.h  Event.h  EventDispatcher.h  KeyEvents.h  LayerEvents.h  MouseEvents.h
ModelToSheet/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
ModelToSheet/src/Layers/: DockspaceLayer.cpp  DockspaceLayer.h  ImGuiLayer.h  Layer.h  LayerStack.h  UILayer.cpp  UILayer.h  ViewportLayer.cpp  ViewportLayer.h
ModelToSheet/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
ModelToSheet/src/Renderer/Animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h
ModelToSheet/src/Scene/: Camera.cpp  Camera.h  SceneData.h
ModelToSheet/src/core/: EntryPoint.cpp  Log.h
